# BasicSpanner

./: .gitignore  .zenodo.json  CMakeLists.txt  LICENSE  README.md  requirements.txt
.github/workflows/: build-linux.yml  publish-docs.yml  windows-build.yml
docs/: _quarto.yml  index.qmd  styles.css
docs/api/: algorithms.qmd  core.qmd  gui.qmd  index.qmd
docs/documentation/: algorithm.qmd  file-formats.qmd  getting-started.qmd  index.qmd  installation.qmd  workflow.qmd
src/: main.cpp
src/core/: AboutPage.h  AnalysisConfig.h  BasicNetworkFinder.cpp  BasicNetworkFinder.h  BasicSpannerEngine.cpp  BasicSpannerEngine.h  Graph.cpp  Graph.h  GraphAlgorithms.cpp  GraphAlgorithms.h  MainPage.h  PaperAlgorithmHelpers.cpp  PaperAlgorithmHelpers.h  ParallelBasicSpannerEngine.cpp  ParallelBasicSpannerEngine.h  ParallelGraphAlgorithms.cpp  ParallelGraphAlgorithms.h  PathManager.cpp  PathManager.h  ThreadPool.cpp  ThreadPool.h  TutorialsDoc.h
src/gui/: AppController.cpp  AppController.h  ColumnSelectionDialog.cpp  ColumnSelectionDialog.h  DarkTheme.h  GraphVisualization.cpp  GraphVisualization.h  LargeNetworksManager.cpp  LargeNetworksManager.h  MainWindow.cpp  MainWindow.h  ParallelLayoutAlgorithms.cpp  ParallelLayoutAlgorithms.h  RealTimeHistogramWindow.cpp  RealTimeHistogramWindow.h  RecentFilesManager.cpp  RecentFilesManager.h  SettingsDialog.cpp  SettingsDialog.h  SplitGraphView.cpp  SplitGraphView.h  UIManager.cpp  UIManager.h  WorkerThread.cpp  WorkerThread.h
src/gui/panels/: AlgorithmConfigPanel.cpp  AlgorithmConfigPanel.h  ExecutionPanel.cpp  ExecutionPanel.h  FileOperationsPanel.cpp  FileOperationsPanel.h  GraphFilterPanel.cpp  GraphFilterPanel.h  NodeListPanel.cpp  NodeListPanel.h  ResultsPanel.cpp  ResultsPanel.h  SeedSelectionPanel.cpp  SeedSelectionPanel.h  VisualizationControlPanel.cpp  VisualizationControlPanel.h
styles/: style.qss
